[build-system]
requires = ["flit_core >=3.7.1,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "hive_udf"
authors = [
    {name = "Zepu Zhang", email = "zepu.zhang@gmail.com"},
]
requires-python = ">=3.6"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "Hive UDF (user defined functions)"
dynamic = ['version']


[project.urls]
Source = "https://github.com/zpz/hive-udf"


[project.optional-dependencies]
test = [
    "bandit",
    "coverage[toml]",
    "flake8",
    "mypy",
    "numpy",
    "pandas",
    "pylint",
    "pytest",
    "pytest-asyncio",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-sv --log-cli-level info -p no:cacheprovider"
asyncio_mode = "auto"


[tool.coverage.report]
fail_under = 0
show_missing = true
skip_empty = true


[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "consider-using-f-string",
    "missing-docstring",
    "invalid-name",
    "line-too-long",
    "fixme",
    "too-few-public-methods",
    "too-many-branches",
    "too-many-return-statements",
]
